2019-0?-??  Felipe Castro (-) <fefcas@gmail.com>;

	* Release 3.05-pre1
	* Fixed:
	* Changed:
	* Added:
	- Instructions for typing with the shift keys (in the introduction).
	- Explanation about the blank lessons after 43, in basic module.
	- Possible to reset progress log of each module individually, as well
	  as character error charts or touch times charts in adaptability.
	* Updated translations:
	- Croatian.
	- Danish.
	- Esperanto.
	- Polish.
	- Portuguese (BR).
	- Russian.
	- Ukrainian.


2019-02-10  Felipe Castro (-) <fefcas@gmail.com>;

	* Release 3.04
	* Fixed:
	- Tutor window was not allowing to shrink horizontaly, only growing.
	  Now its horizontal scroll is allowed to appear, liberating it to shrink.
	- Colors again on keyboard buttons, they had disappeared.
	- Proficiency log file shown as touch time per key in adaptability
	  charts  was being corrupted eventually.
	- Statistics after practice were being colorized.
	- Crashing? when no <libintl.h> installed on the system and? using 
	  ./configure --disable-nls
	- bg.paragraphs and bg.words chars fixed.
	- da.paragraphs and da.words chars fixed. (ét -> et)
	- fi.paragraphs char fixed.
	- hr.paragraphs chars fixed.
	- kk.paragraphs chars fixed?
	- nl.paragraphs chars fixed? (wéér -> weer)
	- pa.paragraphs chars fixed. (removed English word quadrant)
	- ru.paragraphs chars fixed.
	- sr.paragraphs chars fixed. (ascii quotes: " ")
	- uk.paragraphs chars fixed.
	- qwertz_de.kbd chars fixed. (Ä Ö -> ä ö)
	- Substituted deprecated stuff on Glade file, for GTK+-3.8
	* Changed:
	- Inserting a little indentation on tutor texts paragraphs.
	- Using 2 copies of character pool for the basic lessons generator,
	  for a little bit more double sequences of same char.
	- More difficult to get a special proficiency training session on
	  adaptability, but easier to get an special error training.
	- Using new GtkDataBox update, from GIT repository, changes may appear
	  in the progress charts.